[project]
name = "plip"
dynamic = ["version"]
description = "PLIP - Fully automated protein-ligand interaction profiler"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE.txt"}

authors = [
    {name = "PharmAI GmbH", email = "hello@pharm.ai"}
]
maintainers = [
    {name = "PharmAI GmbH", email = "hello@pharm.ai"}
]

keywords = ["bioinformatics", "protein-ligand", "interactions", "molecular-modeling"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

dependencies = [
    "numpy>=1.13.3",
    "lxml>=4.2.1"
]

[project.optional-dependencies]
openbabel = ["openbabel>=3.0.0"]

[project.urls]
Homepage = "https://github.com/pharmai/plip"
Repository = "https://github.com/pharmai/plip"

[project.scripts]
plip = "plip.plipcmd:main"

[tool.setuptools]
packages = ["plip"]

[tool.setuptools.dynamic]
version = {attr = "plip.basic.config.__version__"}
