[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools","pip","requests"]

[project]
name = "plip"
license = "GPL-2.0-only"
dynamic = ["version"]
description = "PLIP - Fully automated protein-ligand interaction profiler"
readme = "README.md"
requires-python = ">=3.6"

authors = [
    {name = "PharmAI GmbH", email = "hello@pharm.ai"}
]
maintainers = [
    {name = "PharmAI GmbH", email = "hello@pharm.ai"}
]

keywords = ["bioinformatics", "protein-ligand", "interactions", "molecular-modeling"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

dependencies = [
    "numpy>=1.13.3",
    "lxml>=4.2.1",
]

[project.urls]
Homepage = "https://github.com/pharmai/plip"
Repository = "https://github.com/pharmai/plip"

[project.scripts]
plip = "plip.plipcmd:main"

[tool.setuptools.packages.find]
include = ["plip*"]

[tool.setuptools.dynamic]
version = {attr = "plip.basic.config.__version__"}
